# ComputationalPhysics2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
myfunc/: CMakeLists.txt  array_routines.c  bessel_func.c  bessel_func.h  bisection.c  bisection.h  integrate_trap.c  integrate_trap.h  lapack_wrappers.c  lapack_wrappers.h  numerov.c  numerov.h  print_routines.c  zeros_newton.c
projects/Ex1/: CMakeLists.txt  bessel_test.c  bound.c  bound1d.c  bound3d.c  plot.py  plot_bessel.py  plot_bound.gp  plot_delta.py  plot_scatt.py  scatt.c  util.c  util.h
projects/Ex2/: CMakeLists.txt  basis.py  hf.py  requirements.txt  system.py
projects/Ex2/HF/: Berillium.eps  Beryllium_radial.eps  basis.py  contr_uncontr.eps  system.py  wf.eps
projects/Ex2/docs/: basis.rst  hf.rst  system.rst
projects/Ex2/docs/source/: conf.py  index.rst
projects/Ex3/: CMakeLists.txt  dft.c  dft20.c  dft40.c  dft8.c  free.c  plot.gp  plot_20.gp  plot_40.gp  plot_8.gp  plot_free.gp  plot_wf_free.gp  util.c  util.h
projects/Ex4/: CMakeLists.txt  copy.c  evolv_1at_time.c  mc1d.c  mc3d.c  mcel.c  plot.gp  plotEl.gp  save.c  test1.c  util.c  util.h
projects/test/: CMakeLists.txt  plot.gp  plot.py  test.c  test.py  test_diag.c  test_numerov.c  util.c  util.h
src/: todo.txt
src/test/: CMakeLists.txt  test.c
